--- a/docs/posts/04wk-1.out.ipynb
+++ b/docs/posts/04wk-1.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/04wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "fe79c3de-3f2f-492c-a166-dd97e2a9cb24"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-y4BW27vnVa08AtMixu1IwL&si=v_BjoNGj2eVBht3Z >}}"
-      ],
-      "id": "e4dc6d87-497c-4de2-ba74-93706b16b43d"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-wD7Am2wZ7NNZjHpt55gwEH&si=Yj3LYi8Y9uU5SYtp>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "b5dcbb88-8894-425a-b566-54293c906dd0"
+      "id": "b8e3369c-a9d5-4155-b1ff-3b694d3378c4"
     },
     {
       "cell_type": "code",
@@ -68,7 +52,7 @@
         "\n",
         "`-` 맞춰봐"
       ],
-      "id": "29b04371-8525-4966-85b3-4a31e78fbd68"
+      "id": "2a589aca-def1-459e-858e-9eb5ff70787b"
     },
     {
       "cell_type": "code",
@@ -121,7 +105,7 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$"
       ],
-      "id": "784289ab-a49a-497f-a461-a7a865b1ceaa"
+      "id": "e5ab7e4d-3d74-4ffd-801b-c2138f17c165"
     },
     {
       "cell_type": "code",
@@ -196,7 +180,7 @@
         "\n",
         "[1] 2024년 수능 미적30번 문제에 나온 함수응용"
       ],
-      "id": "ae5f9f0c-e3ee-45d4-8894-3ee719862f21"
+      "id": "952f1072-2120-41c9-82cd-fa207ac22f36"
     },
     {
       "cell_type": "code",
@@ -244,7 +228,7 @@
         "\n",
         "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,1024)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,1024)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$"
       ],
-      "id": "56821909-4076-4055-b230-d1d915a7876c"
+      "id": "e2b6091a-3a74-4ccb-bf20-28a0ea101a74"
     },
     {
       "cell_type": "code",
@@ -343,7 +327,7 @@
         "\n",
         "`-` 데이터"
       ],
-      "id": "19fa2e56-63f2-4b7c-b837-ec93d290a6b2"
+      "id": "fc304ebc-e6c3-45e8-a26c-c73871334073"
     },
     {
       "cell_type": "code",
@@ -364,7 +348,7 @@
         "`-` 아래와 같은 네트워크를 고려하자. (스펙올라도 취업못하는 예제에서\n",
         "썼던 네크워크랑 비슷해요)"
       ],
-      "id": "675169b0-eb62-4f76-9c40-16b100fca63f"
+      "id": "e0c3ae65-8206-47c3-9846-8af35135d2ce"
     },
     {
       "cell_type": "code",
@@ -387,7 +371,7 @@
         "`-` 직관1: $l_1$,$l_2$의 가중치를 잘 결합하다보면 우연히 아래와 같이\n",
         "만들 수 있다."
       ],
-      "id": "e76371f1-264f-4014-8840-a7f6026b1de2"
+      "id": "547dcc74-8659-4255-810a-393f51e25274"
     },
     {
       "cell_type": "code",
@@ -452,7 +436,7 @@
       "source": [
         "`-` 직관2: 아래들도 가능할듯?"
       ],
-      "id": "bf848d22-14a4-44dd-ac18-37ef5176d863"
+      "id": "e77b53bf-ea79-4b9a-981c-293ea9fa2aa9"
     },
     {
       "cell_type": "code",
@@ -518,7 +502,7 @@
         "$(l_2\\circ a_1 \\circ l_1)(x)$의 결과로 주황색선 + 파란색선도 가능할 것\n",
         "같다. $\\to$ 실제로 가능함"
       ],
-      "id": "73e26ef7-8730-4106-8065-52f9e0f3aac8"
+      "id": "e3cd7552-ad02-4fcd-bd53-8cbf624ace03"
     },
     {
       "cell_type": "code",
@@ -580,7 +564,7 @@
         "`-` 정리1: 2개의 시그모이드를 우연히 잘 결합하면 아래와 같은\n",
         "“1단계-계단함수” 함수 $h$를 만들 수 있다."
       ],
-      "id": "5588789e-0343-4cc3-97ed-07d2ad02bbe3"
+      "id": "812c2355-d576-4586-b462-3ecb84799501"
     },
     {
       "cell_type": "code",
@@ -637,7 +621,7 @@
         "\n",
         "`-` $h(x)$를 활성화함수로 가지는 네트워크를 설계하여 보자."
       ],
-      "id": "4824f551-4efb-4d77-86de-557ff9fbf22b"
+      "id": "9b2e9f9f-34df-458a-8216-49242ea4bb73"
     },
     {
       "cell_type": "code",
@@ -682,7 +666,7 @@
         "\n",
         "**예제1** – 스펙높아도 취업이 안된다고??"
       ],
-      "id": "5b4cad7d-61a7-4b59-a8d3-04387a47104b"
+      "id": "64226641-95e1-47b7-8bf4-974a80a40b4b"
     },
     {
       "cell_type": "code",
@@ -767,7 +751,7 @@
       "source": [
         "**예제2** – 수능에 나왔다던 이상한 곡선..?"
       ],
-      "id": "84b211ae-c71a-4202-95ad-d8658ba99388"
+      "id": "f12b3ce8-f448-4ec2-9552-ba1a67d58bba"
     },
     {
       "cell_type": "code",
@@ -882,7 +866,7 @@
         "\n",
         "## A. 데이터 다운로드"
       ],
-      "id": "7af95620-0950-43bd-9732-7435981b185e"
+      "id": "98969830-3aee-42cc-8ebf-44698f6ffaeb"
     },
     {
       "cell_type": "code",
@@ -1019,7 +1003,7 @@
         "\n",
         "`-` `plt.imshow(...)` 에서 `...`이 shape이 (??,??)이면 흑백이미지를 출력"
       ],
-      "id": "5c4eeceb-67b4-477c-a159-67d521b655cc"
+      "id": "f40b8a0c-9ccf-43e5-9e2c-021820e5156a"
     },
     {
       "cell_type": "code",
@@ -1048,7 +1032,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 shape이 (??,??,3)이면 칼라이미지를\n",
         "출력"
       ],
-      "id": "684db1a3-4686-4923-b86d-ec89e58eeb29"
+      "id": "19271ace-5b19-4062-8db5-9e5293607565"
     },
     {
       "cell_type": "code",
@@ -1080,7 +1064,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 자료형이 int인지 float인지에 따라서\n",
         "인식이 다름"
       ],
-      "id": "a6522b35-917c-40ff-b38b-6cd5f7b8872e"
+      "id": "b19210d1-fa89-4b12-a498-5743a039649f"
     },
     {
       "cell_type": "code",
@@ -1134,7 +1118,7 @@
       "source": [
         "## C. 예비학습 – pathlib"
       ],
-      "id": "bc7ee45a-ec4c-4316-acdb-c70cc2b12a3a"
+      "id": "14340fc3-c203-4c42-8371-24f24ad8b270"
     },
     {
       "cell_type": "code",
@@ -1154,7 +1138,7 @@
       "source": [
         "`-` 오브젝트 생성"
       ],
-      "id": "96b71d8f-8e04-463a-81bd-906500e85d76"
+      "id": "509705cb-5ed7-466f-be9f-2f0933e52024"
     },
     {
       "cell_type": "code",
@@ -1175,7 +1159,7 @@
       "source": [
         "`-` 기능1 – `.ls()`"
       ],
-      "id": "da5dec60-f78c-4670-b8a9-3df14571043c"
+      "id": "7a0e9521-7c7c-44da-b5ce-73617d08ca84"
     },
     {
       "cell_type": "code",
@@ -1196,7 +1180,7 @@
         "`-` 이미지 파일이 저장된 경로로 새로운 `path`오브젝트를 만들고 기능1\n",
         "수행"
       ],
-      "id": "4edbb959-7f7d-4a56-b6d8-0792567286fb"
+      "id": "00a77c63-209f-41ea-a499-0b1f3468ce45"
     },
     {
       "cell_type": "code",
@@ -1229,7 +1213,7 @@
       "source": [
         "`-` 기능2: `/` 로 새로운 path 생성하기"
       ],
-      "id": "393d5a62-9385-4c2c-aed6-f367d74d6c13"
+      "id": "e8a7d50c-43aa-4e74-aede-1559f31e2166"
     },
     {
       "cell_type": "code",
@@ -1249,7 +1233,7 @@
       "source": [
         "`-` 기능1,2의 결합"
       ],
-      "id": "97add3c8-e1df-449e-9479-11bb675eb82a"
+      "id": "faed2f04-4f37-42e8-a508-7fd88776fa04"
     },
     {
       "cell_type": "code",
@@ -1271,7 +1255,7 @@
         "\n",
         "`-` 데이터가 저장된 path 설정"
       ],
-      "id": "6724bdf5-f74c-4f35-b700-6187e6209db0"
+      "id": "d787f4b0-a06c-4acc-bdf0-a02a07a35b2f"
     },
     {
       "cell_type": "code",
@@ -1291,7 +1275,7 @@
       "source": [
         "`-` `X` ,`y`를 만듦"
       ],
-      "id": "b119123e-2266-480c-a3a2-8511e1f6eb99"
+      "id": "fee01cd1-15e6-44ec-8499-2a5c6af1bf87"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1358,7 @@
         "배우고 싶음. $\\to$ 이런건 배운적이 없는데?.. $\\to$ 그렇다면\n",
         "${\\bf X}:(n,784) \\to {\\bf y}:(n,1)$ 으로 가는 맵핑을 학습하자."
       ],
-      "id": "26c035e7-2afc-4c6b-98b6-3927bc6a5002"
+      "id": "8b30e5e6-f2ee-4175-b360-2ec6791be7fd"
     },
     {
       "cell_type": "code",
@@ -1395,7 +1379,7 @@
       "source": [
         "## E. 학습"
       ],
-      "id": "aad32e92-58a2-4b6c-973c-3b6ad1b36b15"
+      "id": "4db134b7-61f1-407e-a204-035b941662f5"
     },
     {
       "cell_type": "code",
@@ -1457,7 +1441,7 @@
         "-   잘맞추는데?\n",
         "-   믿을수가 없는데..?"
       ],
-      "id": "d2fde7dd-adaf-43b5-91f7-fe98e378f955"
+      "id": "55a62ddf-cf0c-47e7-9289-5bc9aabc9aaf"
     },
     {
       "cell_type": "code",
@@ -1477,7 +1461,7 @@
       "source": [
         "## F. Test"
       ],
-      "id": "f7c4b1c1-1c5a-41ee-83e6-063df75b5977"
+      "id": "80ce3a87-34aa-4cbe-b2ff-67d6d8d0cbea"
     },
     {
       "cell_type": "code",
@@ -1627,7 +1611,7 @@
         "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
         "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14."
       ],
-      "id": "c71d36f8-7abc-4d6a-bd35-731c6bec27f2"
+      "id": "9cb7fab0-251e-47e6-a8ac-3527f8a9c5a7"
     }
   ],
   "nbformat": 4,
