--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "237941ef-840b-4ff2-bc70-38d6a8cfe2db"
+      "id": "d3334e2e-5720-41b1-bd45-c6f2e509278d"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "d4c93d1e-0242-4efd-b24c-5cf065e0f72e"
+      "id": "e35bbbe2-9899-4713-890e-17d685ca3bd1"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "d288b0e2-a92b-4a7b-abfc-a2039b4fbb9d"
+      "id": "c022e484-2ce3-498c-8866-d62af7ce32c2"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "3922f482-6294-46c5-85af-0452afb9964e"
+      "id": "d5d78111-7134-4e80-a1f2-37530683f6da"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "e34d412f-e0cb-4586-9560-f5d7b94e3db1"
+      "id": "de8a14df-d701-491b-8cb3-df803a5176ab"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "7ca6b38b-a2ee-4753-84da-149b195df923"
+      "id": "b6784c34-4333-4ca4-8570-4b0d6137793e"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "aba71b12-1025-44ad-8a84-aff0255fd8f6"
+      "id": "33c63ad6-0b5a-40bb-912b-76c79395202e"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "e0dad648-040d-44c1-8e2f-0e8ddc869d89"
+      "id": "6bdb4fba-c392-49bc-8ab6-62197c90846f"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "5ae9d8dd-d7ae-4e50-a08d-7c45b0a00614"
+      "id": "8f0a7c5b-f433-4797-a761-b28bf55a524c"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "12222b3e-3c54-4d4e-91c3-dd1a7677ae3b"
+      "id": "62122dc7-aff7-4e2d-9e22-9e2aa3b53e7f"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "553edca8-4f7c-4ed7-ab2f-419814cfd570"
+      "id": "ab28ff94-aea2-46ee-a862-cb233c69c52d"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "21c89ee3-7595-471f-8530-7dab95c881b1"
+      "id": "ff4d4c6c-7130-4f36-88b3-2c8e8c36c12f"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "37dec905-9809-4c7b-9dda-b90ac8db99f5"
+      "id": "bd40feda-3289-487a-ba8d-7ec8a27c4b35"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "1c01e769-568c-4aa7-8d3d-2f994a741434"
+      "id": "2581ac1c-0f7b-402c-b630-257d54e2aea5"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "0c4e9f05-1ced-4f6e-88b6-9be8ed0b829c"
+      "id": "3df093a6-9b1c-4204-a977-3c0cb8e05352"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "a8e003a3-2ac1-41fc-b5c4-46d4329d0ecf"
+      "id": "fd852ba9-b9f1-4a3e-b04d-392ae4be1595"
     },
     {
       "cell_type": "code",
