--- a/docs/posts/04wk-1.out.ipynb
+++ b/docs/posts/04wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "b8e3369c-a9d5-4155-b1ff-3b694d3378c4"
+      "id": "05958d10-5e5b-439a-a549-62bee34b1b4f"
     },
     {
       "cell_type": "code",
@@ -52,7 +52,7 @@
         "\n",
         "`-` 맞춰봐"
       ],
-      "id": "2a589aca-def1-459e-858e-9eb5ff70787b"
+      "id": "a84986bf-6113-42c0-9c2d-5bfe847e6f7b"
     },
     {
       "cell_type": "code",
@@ -105,7 +105,7 @@
         "\n",
         "$$\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,256)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,256)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$$"
       ],
-      "id": "e5ab7e4d-3d74-4ffd-801b-c2138f17c165"
+      "id": "d4b81fd1-2d98-4cf8-a082-148569c06b3b"
     },
     {
       "cell_type": "code",
@@ -180,7 +180,7 @@
         "\n",
         "[1] 2024년 수능 미적30번 문제에 나온 함수응용"
       ],
-      "id": "952f1072-2120-41c9-82cd-fa207ac22f36"
+      "id": "43f42cce-d790-4328-b26f-a669e6ee8d11"
     },
     {
       "cell_type": "code",
@@ -228,7 +228,7 @@
         "\n",
         "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\underset{(n,1024)}{\\boldsymbol u^{(1)}} \\overset{a_1}{\\to} \\underset{(n,1024)}{\\boldsymbol v^{(1)}} \\overset{l_1}{\\to} \\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{a_2}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$"
       ],
-      "id": "e2b6091a-3a74-4ccb-bf20-28a0ea101a74"
+      "id": "b14f3a11-1c09-41c6-9ec6-2cae89f370e6"
     },
     {
       "cell_type": "code",
@@ -327,7 +327,7 @@
         "\n",
         "`-` 데이터"
       ],
-      "id": "fc304ebc-e6c3-45e8-a26c-c73871334073"
+      "id": "be0f70ff-4ca8-4d93-a823-de6221cd605f"
     },
     {
       "cell_type": "code",
@@ -348,7 +348,7 @@
         "`-` 아래와 같은 네트워크를 고려하자. (스펙올라도 취업못하는 예제에서\n",
         "썼던 네크워크랑 비슷해요)"
       ],
-      "id": "e0c3ae65-8206-47c3-9846-8af35135d2ce"
+      "id": "46464c29-edd5-4064-8d82-390f6a94168e"
     },
     {
       "cell_type": "code",
@@ -371,7 +371,7 @@
         "`-` 직관1: $l_1$,$l_2$의 가중치를 잘 결합하다보면 우연히 아래와 같이\n",
         "만들 수 있다."
       ],
-      "id": "547dcc74-8659-4255-810a-393f51e25274"
+      "id": "8ec328e4-bc47-4766-a2f7-4413bad07ea0"
     },
     {
       "cell_type": "code",
@@ -436,7 +436,7 @@
       "source": [
         "`-` 직관2: 아래들도 가능할듯?"
       ],
-      "id": "e77b53bf-ea79-4b9a-981c-293ea9fa2aa9"
+      "id": "c2f67c5e-2772-4734-831a-e407b204049f"
     },
     {
       "cell_type": "code",
@@ -502,7 +502,7 @@
         "$(l_2\\circ a_1 \\circ l_1)(x)$의 결과로 주황색선 + 파란색선도 가능할 것\n",
         "같다. $\\to$ 실제로 가능함"
       ],
-      "id": "e3cd7552-ad02-4fcd-bd53-8cbf624ace03"
+      "id": "6ff8322c-3e02-465c-9fb0-fa2b0b91e519"
     },
     {
       "cell_type": "code",
@@ -564,7 +564,7 @@
         "`-` 정리1: 2개의 시그모이드를 우연히 잘 결합하면 아래와 같은\n",
         "“1단계-계단함수” 함수 $h$를 만들 수 있다."
       ],
-      "id": "812c2355-d576-4586-b462-3ecb84799501"
+      "id": "7b94d2cc-ad10-4ef6-a82a-119e638057bf"
     },
     {
       "cell_type": "code",
@@ -619,13 +619,13 @@
         "\n",
         "## C. $h$의 위력\n",
         "\n",
-        "`-` $h(x)$를 활성화함수로 가지는 네트워크를 설계하여 보자."
+        "`-` $h(x)$를 생성하는 클래스를 만들어보자."
       ],
-      "id": "9b2e9f9f-34df-458a-8216-49242ea4bb73"
+      "id": "64b76267-76f5-4726-88bc-97e8aaa5fcee"
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 78,
       "metadata": {
         "tags": []
       },
@@ -635,6 +635,7 @@
         "    def __init__(self):\n",
         "        super().__init__() \n",
         "    def forward(self, u):\n",
+        "        h = lambda x: torch.sigmoid(200*(x+0.5))+torch.sigmoid(-200*(x-0.5))-1.0\n",
         "        v = h(u)\n",
         "        return v # activation 의 출력 "
       ],
@@ -642,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 79,
       "metadata": {
         "tags": []
       },
@@ -666,7 +667,7 @@
         "\n",
         "**예제1** – 스펙높아도 취업이 안된다고??"
       ],
-      "id": "64226641-95e1-47b7-8bf4-974a80a40b4b"
+      "id": "d27f090d-d77e-4a17-830b-405c574ab499"
     },
     {
       "cell_type": "code",
@@ -751,7 +752,7 @@
       "source": [
         "**예제2** – 수능에 나왔다던 이상한 곡선..?"
       ],
-      "id": "f12b3ce8-f448-4ec2-9552-ba1a67d58bba"
+      "id": "92785107-2664-4fea-a9ab-b55a24c757d0"
     },
     {
       "cell_type": "code",
@@ -866,7 +867,7 @@
         "\n",
         "## A. 데이터 다운로드"
       ],
-      "id": "98969830-3aee-42cc-8ebf-44698f6ffaeb"
+      "id": "547651d0-f6d3-4864-b7d5-cd3c86994d88"
     },
     {
       "cell_type": "code",
@@ -1003,7 +1004,7 @@
         "\n",
         "`-` `plt.imshow(...)` 에서 `...`이 shape이 (??,??)이면 흑백이미지를 출력"
       ],
-      "id": "f40b8a0c-9ccf-43e5-9e2c-021820e5156a"
+      "id": "c60e5806-def9-443e-87a6-df11fcf6e523"
     },
     {
       "cell_type": "code",
@@ -1032,7 +1033,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 shape이 (??,??,3)이면 칼라이미지를\n",
         "출력"
       ],
-      "id": "19271ace-5b19-4062-8db5-9e5293607565"
+      "id": "99b8db65-5cc5-4dca-a323-07dbcfca956c"
     },
     {
       "cell_type": "code",
@@ -1064,7 +1065,7 @@
         "`-` `plt.imshow(...)` 에서 `...`의 자료형이 int인지 float인지에 따라서\n",
         "인식이 다름"
       ],
-      "id": "b19210d1-fa89-4b12-a498-5743a039649f"
+      "id": "ce0b893e-0b80-4790-86c6-1bfff9f03e22"
     },
     {
       "cell_type": "code",
@@ -1118,7 +1119,7 @@
       "source": [
         "## C. 예비학습 – pathlib"
       ],
-      "id": "14340fc3-c203-4c42-8371-24f24ad8b270"
+      "id": "e32a097f-3c54-461b-b3e4-3ab3f80afb87"
     },
     {
       "cell_type": "code",
@@ -1138,7 +1139,7 @@
       "source": [
         "`-` 오브젝트 생성"
       ],
-      "id": "509705cb-5ed7-466f-be9f-2f0933e52024"
+      "id": "90723dc2-ce1d-44a1-8b81-f732e4507d35"
     },
     {
       "cell_type": "code",
@@ -1159,7 +1160,7 @@
       "source": [
         "`-` 기능1 – `.ls()`"
       ],
-      "id": "7a0e9521-7c7c-44da-b5ce-73617d08ca84"
+      "id": "d6efb4ce-51bb-4352-934d-e289eb33f3d7"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1181,7 @@
         "`-` 이미지 파일이 저장된 경로로 새로운 `path`오브젝트를 만들고 기능1\n",
         "수행"
       ],
-      "id": "00a77c63-209f-41ea-a499-0b1f3468ce45"
+      "id": "4d056201-43e2-44a4-8156-018664efd0d9"
     },
     {
       "cell_type": "code",
@@ -1213,7 +1214,7 @@
       "source": [
         "`-` 기능2: `/` 로 새로운 path 생성하기"
       ],
-      "id": "e8a7d50c-43aa-4e74-aede-1559f31e2166"
+      "id": "0cf4436b-4e5c-47d5-8e9b-2111db67d92f"
     },
     {
       "cell_type": "code",
@@ -1233,7 +1234,7 @@
       "source": [
         "`-` 기능1,2의 결합"
       ],
-      "id": "faed2f04-4f37-42e8-a508-7fd88776fa04"
+      "id": "57e08985-c3d1-49a0-9a23-3892a4e3fd56"
     },
     {
       "cell_type": "code",
@@ -1255,7 +1256,7 @@
         "\n",
         "`-` 데이터가 저장된 path 설정"
       ],
-      "id": "d787f4b0-a06c-4acc-bdf0-a02a07a35b2f"
+      "id": "bac543a7-860f-4304-addc-bca417fe3860"
     },
     {
       "cell_type": "code",
@@ -1275,7 +1276,7 @@
       "source": [
         "`-` `X` ,`y`를 만듦"
       ],
-      "id": "fee01cd1-15e6-44ec-8499-2a5c6af1bf87"
+      "id": "2fc712eb-9bf9-4a95-8f71-1590da7e8131"
     },
     {
       "cell_type": "code",
@@ -1358,7 +1359,7 @@
         "배우고 싶음. $\\to$ 이런건 배운적이 없는데?.. $\\to$ 그렇다면\n",
         "${\\bf X}:(n,784) \\to {\\bf y}:(n,1)$ 으로 가는 맵핑을 학습하자."
       ],
-      "id": "8b30e5e6-f2ee-4175-b360-2ec6791be7fd"
+      "id": "4f261465-b3cb-4dcd-9684-40922c628178"
     },
     {
       "cell_type": "code",
@@ -1379,7 +1380,7 @@
       "source": [
         "## E. 학습"
       ],
-      "id": "4db134b7-61f1-407e-a204-035b941662f5"
+      "id": "9912aec7-7b6f-429d-9f04-7c184928fd5b"
     },
     {
       "cell_type": "code",
@@ -1441,7 +1442,7 @@
         "-   잘맞추는데?\n",
         "-   믿을수가 없는데..?"
       ],
-      "id": "55a62ddf-cf0c-47e7-9289-5bc9aabc9aaf"
+      "id": "4897b154-0994-408d-b654-2afa15330939"
     },
     {
       "cell_type": "code",
@@ -1461,7 +1462,7 @@
       "source": [
         "## F. Test"
       ],
-      "id": "80ce3a87-34aa-4cbe-b2ff-67d6d8d0cbea"
+      "id": "0d3dd681-e740-448c-8557-ccdf8ccb32f4"
     },
     {
       "cell_type": "code",
@@ -1611,7 +1612,7 @@
         "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
         "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14."
       ],
-      "id": "9cb7fab0-251e-47e6-a8ac-3527f8a9c5a7"
+      "id": "c374d91a-6d89-419f-ae58-1edf86faf384"
     }
   ],
   "nbformat": 4,
