--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "cf58a769-7e50-4518-ab56-b0edbe7dc471"
+      "id": "fc59b193-5865-4fe5-bd01-e9f3fdb726de"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "7a180614-2055-43a8-aad6-466eae5789c0"
+      "id": "d927056f-4fc8-4066-82c1-7dee2c36496d"
     },
     {
       "cell_type": "code",
@@ -79,7 +79,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "e6be7466-e16d-4403-ab1e-950f43e1a6a6"
+      "id": "bac48fcb-4131-42e1-ac7f-83f0d99f26be"
     },
     {
       "cell_type": "code",
@@ -111,7 +111,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "f7d5e4c8-e3a9-425a-b9d9-ba598e415539"
+      "id": "fe079166-6b83-4b75-a531-e0fa6a46f9f9"
     },
     {
       "cell_type": "code",
@@ -174,7 +174,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "6d17d3b1-5e26-4198-ab77-193804e37535"
+      "id": "29b5fdad-8f7f-4427-b2da-3e7db54859a1"
     },
     {
       "cell_type": "code",
@@ -211,7 +211,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "d50a6aea-3c35-4893-9fef-70a2290f80ed"
+      "id": "7a289a4d-c00d-473e-ae2a-36a259a32538"
     },
     {
       "cell_type": "code",
@@ -248,7 +248,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "489f46d7-2632-4ed2-990d-1cf967e19f5c"
+      "id": "45330719-19da-4554-ab43-3b1aae1aebbc"
     },
     {
       "cell_type": "code",
@@ -281,7 +281,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "348a5279-9da9-4064-abc1-8f92fb42af99"
+      "id": "0bee836e-fc3b-4023-b243-7df0c5030651"
     },
     {
       "cell_type": "code",
@@ -344,7 +344,7 @@
         ">\n",
         "> 를 원하는 정확도로 근사시킨 네트워크라고 할지라도\n",
         ">\n",
-        "> $${\\bf XX}_{n \\times p} \\to {\\bf yy}_{n\\times q}$$\n",
+        "> $${\\bf XX}_{m \\times p} \\to {\\bf yy}_{m\\times q}$$\n",
         ">\n",
         "> 는 엉터리로 나올 수 있다. 시벤코는 넓은 신경망이 가지는 표현력의\n",
         "> 한계를 수학적으로 밝혔을 뿐이다. 넓은 신경망이 우수한 신경망[1]이라는\n",
@@ -356,10 +356,10 @@
         "\n",
         "`-` 오버피팅의 해결책: 드랍아웃\n",
         "\n",
-        "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 통계학적으로 우수한\n",
+        "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "b3e770e5-cd03-4d28-91d6-40131416fd71"
+      "id": "635029c1-beaa-4042-9503-38da4fd24636"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 올바른 사용법"
       ],
-      "id": "4800bade-22e8-49e3-88f8-2a064ec54346"
+      "id": "ed99644b-26eb-43ea-a748-862c69e4d135"
     },
     {
       "cell_type": "code",
@@ -477,7 +477,7 @@
       "source": [
         "## B. 드랍아웃 레이어"
       ],
-      "id": "8ea8490f-d009-4448-94c3-b8ce50f7f20f"
+      "id": "166b64be-090f-41b8-8673-06e37b999d91"
     },
     {
       "cell_type": "code",
@@ -535,7 +535,7 @@
         "\n",
         "**(표현1)**"
       ],
-      "id": "8edc6356-407a-436f-bd6c-8dfbf8a6bfa5"
+      "id": "fee4cf38-b9b4-4a02-8f43-4216ee85a0ec"
     },
     {
       "cell_type": "code",
@@ -582,7 +582,7 @@
         "**(표현2)** 모든 $i$에 대하여 아래의 그림을 반복한다고 하면 (표현1)과\n",
         "같다."
       ],
-      "id": "971fd34a-cf19-4803-bc3f-47bf38cda9c2"
+      "id": "bf33e510-3d35-426b-bd77-a706c6094e75"
     },
     {
       "cell_type": "code",
@@ -614,7 +614,7 @@
         "**(표현3)** 그런데 (표현2)에서 아래와 같이 $x_i$, $y_i$ 대신에 간단히\n",
         "$x$, $y$로 쓰는 경우도 많음"
       ],
-      "id": "e910ca65-9cab-4e3e-a04e-c928ccf35dd1"
+      "id": "4cecf31c-3c1b-4d4d-a64d-fea8c897de55"
     },
     {
       "cell_type": "code",
@@ -647,7 +647,7 @@
         "\n",
         "**(표현4)** bais=False 대신에 bias=True를 주면 1을 생략할 수 있음"
       ],
-      "id": "9ac5602f-beef-48fa-9ea0-7934b3bfec55"
+      "id": "46102792-f3d5-429c-ac08-294e5296e3d1"
     },
     {
       "cell_type": "code",
@@ -675,7 +675,7 @@
       "source": [
         "**(표현4의 수정)** $\\hat{w}_1$대신에 $\\hat{w}$를 쓰는 것이 더 자연스러움"
       ],
-      "id": "c47f6699-2431-40fb-b4b6-7cc7402d126f"
+      "id": "f053c57b-966d-4b5b-bc78-3429a366452c"
     },
     {
       "cell_type": "code",
@@ -703,7 +703,7 @@
       "source": [
         "**(표현5)** 선형변환의 결과는 아래와 같이 $u$로 표현하기도 한다."
       ],
-      "id": "1231a12a-1340-40a6-98c2-c9a52155c1f6"
+      "id": "98c5ad03-c1e6-4dfc-ac15-bc084f23faac"
     },
     {
       "cell_type": "code",
@@ -751,7 +751,7 @@
         "\n",
         "**(강의노트의 표현)**"
       ],
-      "id": "4f5d6225-7046-45c3-96e2-ae4ba625d0da"
+      "id": "43bb7873-a428-4d03-bece-3bf547d4b14f"
     },
     {
       "cell_type": "code",
@@ -787,7 +787,7 @@
         "**(좀 더 일반화된 표현)** 10월4일 강의노트 상황을 일반화하면 아래와\n",
         "같다."
       ],
-      "id": "186be6e4-96c6-413c-80a7-1a9bb1f61ddd"
+      "id": "6df53267-67c6-4333-9c9c-76648be823f3"
     },
     {
       "cell_type": "code",
@@ -830,7 +830,7 @@
         "\n",
         "**(선형+비선형을 하나의 Layer로 묶은 표현)**"
       ],
-      "id": "27682498-9774-4770-b8b9-6a6084c00990"
+      "id": "fb78b0cf-d806-4921-955f-c81437b116dc"
     },
     {
       "cell_type": "code",
@@ -898,7 +898,7 @@
         "\n",
         "**(노드의 개념이 포함된 그림)**"
       ],
-      "id": "cfd1a04c-8273-43ba-ab9b-6c314ec35a9d"
+      "id": "b8a6c25d-760a-47ba-b620-6c6cb4cc9a3b"
     },
     {
       "cell_type": "code",
@@ -950,7 +950,7 @@
         "\n",
         "**(“number of nodes = number of features”로 이해한 그림)**"
       ],
-      "id": "70293966-6cb0-4dff-a45f-c152d1320178"
+      "id": "3d7c405c-2970-496b-bdbf-33645e55ecc0"
     },
     {
       "cell_type": "code",
@@ -1003,7 +1003,7 @@
         "\n",
         "**(다이어그램표현)**"
       ],
-      "id": "ddb89373-29a1-4ddd-8991-6732ae3efa09"
+      "id": "17c0c276-8820-4fa9-9ea4-6e5fef3198d1"
     },
     {
       "cell_type": "code",
@@ -1194,7 +1194,7 @@
         "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
         "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14."
       ],
-      "id": "fd3ac989-a9c4-4434-b187-8fc7852e9f6e"
+      "id": "2fd43103-9857-4413-b378-fe95be22bf28"
     }
   ],
   "nbformat": 4,
