--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "3284621c-89fa-48fa-ac3b-e9c8cb86155a"
+      "id": "02fd53d3-b103-490b-bc23-1d5cf5e1bc86"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "8ad6ed26-a301-4bb5-88f1-5d9931da5542"
+      "id": "604683c6-1c8a-4440-898c-97164c31df12"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "f19bc1ab-2cd6-4ed9-92e2-7649c372a80f"
+      "id": "6e396d32-dd78-4179-9c8b-371d4f81083e"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "be09cec7-34de-431f-b5a1-14058a1d080d"
+      "id": "cda792b0-e59d-4c06-983c-d5efda64ee4b"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "494aff5a-03b0-4108-bc67-5b1bedbbb09c"
+      "id": "14709e05-fbba-48fd-aad2-79a0a21c92cd"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "e1bfe9e8-bbd6-4be3-9f67-8ec75d46bc41"
+      "id": "cf0108c7-585e-4acf-95db-66cecb8c4d66"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "96f92cee-e934-4871-8656-977653b6d3fe"
+      "id": "dd38b112-f99e-41ef-ad1b-2ffc00c81386"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "08146dfa-17e2-4b17-b794-04d0d7a01239"
+      "id": "ebfbd0a1-66a6-470e-b128-b07cab858977"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "bc6366cf-475e-494f-a34d-b74d1d098c00"
+      "id": "9043fd13-eb98-44e0-8016-42ee68d78cd8"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "0da7a1d6-7376-4080-91ed-67257f25ffc9"
+      "id": "f3f0893b-c23c-44c5-8a37-dbf6e541ffa5"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "8342d93a-12cb-4ba0-9b93-6686fb323017"
+      "id": "840c1d1a-6d71-43d5-a90c-94c7a13bfc5b"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "a287e58c-67c4-4a12-9ed3-935e4db09ae3"
+      "id": "ddb82658-c94c-40e7-b452-83d5e934eb5b"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "9582640b-fe04-4a95-8e52-43295cd45317"
+      "id": "3f851db3-039a-44be-95a5-65f1ffd0cbf3"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "db95ba82-d9ec-4e84-8752-f20588e3a630"
+      "id": "ce634b0c-a8c6-402a-96a3-67c3bdb80b09"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "2a6263f2-37d3-488f-b6bf-bef88e800852"
+      "id": "77ae274a-981b-433c-a152-7c5fa900d388"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "7baee591-aedc-42d1-9043-d50a9c580a98"
+      "id": "25d39a79-aae1-4574-ad44-606dee6a2f30"
     },
     {
       "cell_type": "code",
