--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "40f642c3-49ff-4175-ab42-6164a54d79f6"
+      "id": "2af03a62-3232-492e-a850-2f3231907601"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "aa1dce3d-602a-481f-9276-f45acabbcdb1"
+      "id": "e7b85053-8715-4b2e-9b24-c4d12ded0815"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "670d7619-6749-424a-b9f1-52a2eeca9386"
+      "id": "db3bbfe2-6a01-4a23-8616-4ea68d30b17a"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "53e0e00a-dbca-4bee-bc17-4a2adf9469ab"
+      "id": "8ae10645-de3a-4a84-b582-bb901bafc739"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "cc31ce08-0d45-42a9-a12a-4bb404f8d8f4"
+      "id": "8ccf4b78-f950-4630-9c6f-a882494e2525"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "26816d07-9fa8-4a65-91e5-88c02e65c8bf"
+      "id": "36f6e6ee-64da-4a2d-b7b2-4e0d26276cfb"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "d8915caf-6285-4854-bffb-18a05e3b0103"
+      "id": "fb59a4a2-946f-4722-898d-c9321ef70ed2"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "067e999a-96da-436c-b2af-46f4da298677"
+      "id": "f8e80a68-7d78-4132-ad47-03ccf42899ff"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "37f8974d-5014-4cd0-9e41-4d4b0171e817"
+      "id": "5dab3144-dc71-4e13-89c5-e1a10132a99c"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "38eeef5b-adf9-4886-8888-6fc387a4d6af"
+      "id": "5ee76b1b-fadb-4d27-adc0-f1386f073467"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "426ab50a-a53e-421f-b96c-94242874e8b4"
+      "id": "20653fa0-fd7c-4835-80f0-7879f6e8c453"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "316e242d-ba5c-47f9-80bc-43ceae6009a1"
+      "id": "bad69306-19ee-439a-92b6-66858d04acfa"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "ec71a26c-626a-4d14-8522-ad834503648c"
+      "id": "87b3aa00-7c94-4ec3-b42c-2a149bedb1fd"
     },
     {
       "cell_type": "code",
@@ -847,6 +847,45 @@
         ")\n",
         "```\n",
         "\n",
+        "# 6. 숙제 – 나혼자 내고 나혼자 품..\n",
+        "\n",
+        "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
+        "\n",
+        "<figure class=\"margin-caption\">\n",
+        "<img\n",
+        "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
+        "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
+        "<figcaption aria-hidden=\"true\">출처: <a\n",
+        "href=\"https://aws.amazon.com/ko/what-is/deep-learning/\"\n",
+        "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
+        "</figure>"
+      ],
+      "id": "8afde69d-a53d-4b26-87f3-78db51195a55"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 132,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "net = torch.nn.Sequential(\n",
+        "    torch.nn.Linear(784,128),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Linear(128,64),\n",
+        "    torch.nn.ReLU(),\n",
+        "    torch.nn.Linear(64,10),\n",
+        "    #torch.nn.Softmax()\n",
+        ")\n",
+        "loss_fn = torch.nn.CrossEntropyLoss() # <- 이 로스에 torch.nn.Softmax() 가 사실 포함되어있음.."
+      ],
+      "id": "4f40a02f-d997-40fa-b751-4971e01b85b6"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Cybenko, George. 1989. “Approximation by Superpositions of a Sigmoidal\n",
         "Function.” *Mathematics of Control, Signals and Systems* 2 (4): 303–14.\n",
         "\n",
@@ -854,7 +893,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "31623fdd-5a1d-4fec-bd85-7c89322ac7b3"
+      "id": "a4235589-8a55-4faa-bc8f-1c6c9ccd8949"
     }
   ],
   "nbformat": 4,
