--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "2a850be5-2cc4-40dc-a06a-8ce1de0ae409"
+      "id": "5af149be-d115-4fa4-9e1c-d40e3c70cafe"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "7dd0404d-3ca9-48e6-8af9-7ced0f901ad3"
+      "id": "3002ea5c-df16-4ab2-90b0-3e87a370194f"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "102d8efa-3742-47e2-b66a-3c214b513173"
+      "id": "34ec7349-962e-4ecd-ad72-fcd19ab224ce"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "1ee35cf4-6826-4482-b217-99ddfe97984c"
+      "id": "daed7445-81bd-4160-8fa5-ff9381e56abd"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "00303b30-e873-4a48-adad-257b612b9430"
+      "id": "955100df-518d-4368-b612-be2d536c81e8"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "ef94b9be-9c69-4f2b-adab-652539cf9799"
+      "id": "e57b3f9c-42c4-4ba7-965f-9c27a6168263"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "11c7cb47-5ba7-4219-88d7-5cb7a289e6cc"
+      "id": "5af28f1a-e6d5-4138-915f-65d288f49b0b"
     },
     {
       "cell_type": "code",
@@ -320,8 +320,8 @@
         "> 가깝도록 만들 수 있다는 의다) 쉽게 말하면 ${\\bf X} \\to {\\bf y}$ 인\n",
         "> 어떠한 복잡한 규칙라도 하나의 은닉층을 가진 심층신경망(DNN)이 원하는\n",
         "> 정확도로 근사시킨다는 의미이다. **그렇지만 이러한 규칙이 네크워크가\n",
-        "> 학습하지 못했던 자료 (처음 보는 자료, unseen data)\n",
-        "> ${\\bf XX}_{m \\times p}$, ${\\bf yy}_{m \\times p}$ 에 대하여서도\n",
+        "> 학습하지 못했던 자료 (처음 보는 자료, unseen data)**\n",
+        "> ${\\bf XX}_{m \\times p}$, ${\\bf yy}_{m \\times p}$ **에 대하여서도\n",
         "> 올바르게 적용된다라는 보장은 없다**. 즉\n",
         ">\n",
         "> $${\\bf X}_{n \\times p} \\to {\\bf y}_{n\\times q}$$\n",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "1199a460-c162-4b80-9682-22314d36d0f7"
+      "id": "ac3c50c2-f08c-4898-929b-59b6ddbf191c"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "ef233c61-5b41-48b5-8994-14025aa1c047"
+      "id": "a059b566-a63c-46a3-8a57-2d57dc1a78b7"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "9a7c0196-f4eb-4721-851e-24a46ce75e32"
+      "id": "0fae79ac-49c6-405e-be60-78e166bb0287"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "d7662a4b-366a-4d1e-970f-4544ba341d7c"
+      "id": "a5101487-a24b-4e50-b43d-b1977e39b7a3"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "143d925e-2306-41ae-9e95-91e115160e32"
+      "id": "edc34ba7-bfcb-46c8-babd-344f6dbaee86"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "905cec6c-e3ba-4abe-8592-8e068e9c2ea5"
+      "id": "00ed8008-f371-4d55-8cd1-8562a3c9e8ee"
     },
     {
       "cell_type": "code",
@@ -780,10 +780,12 @@
         "> ) \n",
         "> ```\n",
         "\n",
+        "**가끔씩 Layer 세는 방식이 다르게 써져있는 문헌도 있는데 무시할것**\n",
+        "\n",
         "> **Important**\n",
         ">\n",
-        "> 위키의 경우 레이어를 세는 개념이 좀 다릅니다. 제가 설명한 방식보다 1씩\n",
-        "> 더해서 셉니다. 즉 아래의 경우 레이어를 3개로 카운트합니다.\n",
+        "> 문헌에 따라서 레이어를 세는 개념이 좀 다릅니다. 제가 설명한 방식보다\n",
+        "> 1씩 더해서 셉니다. 즉 아래의 경우 레이어를 3개로 카운트합니다.\n",
         ">\n",
         "> ``` python\n",
         "> ## 예시1 -- 위키식으로 세면 3층 (히든레이어는 1층)\n",
@@ -795,12 +797,13 @@
         "> )\n",
         "> ```\n",
         ">\n",
-        "> 증거는 아래에 있습니다.\n",
+        "> 예를 들어 아래의 링크에서는 이러한 경우 레이어는 3개라고 설명하고\n",
+        "> 있습니다.\n",
         ">\n",
         "> -   <https://en.wikipedia.org/wiki/Multilayer_perceptron#Layers>\n",
         ">\n",
-        "> 이러한 카운팅은 **“무시”하세요. 제가 맞아요.** 위키에 잘못(?) 나와있는\n",
-        "> 이유는 아래와 같습니다.\n",
+        "> 이러한 카운팅은 **“무시”하세요. 제가 맞아요.** 위의 링크에 잘못(?)\n",
+        "> 나와있는 이유는 아래와 같습니다.\n",
         ">\n",
         "> -   진짜 예전에 MLP를 소개할 초창기에서는 위의 경우 Layer를 3개로\n",
         ">     셌음. (Rosenblatt et al. 1962)\n",
@@ -860,7 +863,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "60ea7776-9d6f-426c-ad97-def70a311f0e"
+      "id": "5055d7a6-c11a-4d97-a4f7-cacbd758bc43"
     },
     {
       "cell_type": "code",
@@ -893,7 +896,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "d92a96aa-4db9-4fef-b20a-25718250c89c"
+      "id": "58409101-d485-422e-95e0-6ae68ef71083"
     }
   ],
   "nbformat": 4,
