--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "5af149be-d115-4fa4-9e1c-d40e3c70cafe"
+      "id": "332a06d6-077c-42af-a3f5-91b429aea999"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "3002ea5c-df16-4ab2-90b0-3e87a370194f"
+      "id": "e5076ba6-06eb-48f1-8f2d-f2c4905a7016"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "34ec7349-962e-4ecd-ad72-fcd19ab224ce"
+      "id": "16d50e77-a10e-497c-90de-93845591b4e0"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "daed7445-81bd-4160-8fa5-ff9381e56abd"
+      "id": "0c44da2d-a3e8-44b8-b97f-072e03f7e04f"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "955100df-518d-4368-b612-be2d536c81e8"
+      "id": "fdd1c1ff-0637-42b9-af42-7f3014248f3d"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "e57b3f9c-42c4-4ba7-965f-9c27a6168263"
+      "id": "41299751-a37f-4de3-921b-77f425fe8f8e"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "5af28f1a-e6d5-4138-915f-65d288f49b0b"
+      "id": "e9c240ed-ec4c-45db-b066-65849f02de5a"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "ac3c50c2-f08c-4898-929b-59b6ddbf191c"
+      "id": "763b8092-7618-4eb8-b725-921e9447b1c0"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "a059b566-a63c-46a3-8a57-2d57dc1a78b7"
+      "id": "559f3ad8-cf78-4bad-95ed-44a2419f6d6f"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "0fae79ac-49c6-405e-be60-78e166bb0287"
+      "id": "c775e2ee-d5d3-4c54-9288-1f1672249e86"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "a5101487-a24b-4e50-b43d-b1977e39b7a3"
+      "id": "53059b2a-60ab-4f21-9731-8b51a65bc8b6"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "edc34ba7-bfcb-46c8-babd-344f6dbaee86"
+      "id": "63448138-0ca6-46ad-aaad-44f30bc5e7e9"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "00ed8008-f371-4d55-8cd1-8562a3c9e8ee"
+      "id": "d269a1e8-e366-4870-b231-a6c76c459ddf"
     },
     {
       "cell_type": "code",
@@ -780,15 +780,14 @@
         "> ) \n",
         "> ```\n",
         "\n",
-        "**가끔씩 Layer 세는 방식이 다르게 써져있는 문헌도 있는데 무시할것**\n",
-        "\n",
         "> **Important**\n",
         ">\n",
-        "> 문헌에 따라서 레이어를 세는 개념이 좀 다릅니다. 제가 설명한 방식보다\n",
-        "> 1씩 더해서 셉니다. 즉 아래의 경우 레이어를 3개로 카운트합니다.\n",
+        "> 문헌에 따라서 레이어를 세는 개념이 제가 설명한 방식과 다른경우가\n",
+        "> 있습니다. 제가 설명한 방식보다 1씩 더해서 셉니다. 즉 아래의 경우\n",
+        "> 레이어를 3개로 카운트합니다.\n",
         ">\n",
         "> ``` python\n",
-        "> ## 예시1 -- 위키식으로 세면 3층 (히든레이어는 1층)\n",
+        "> ## 예시1 -- 문헌에 따라 3층으로 세는 경우가 있음 (히든레이어는 1층)\n",
         "> torch.nn.Sequential(\n",
         ">     torch.nn.Linear(??,??), ## <-- 학습해야할 가중치가 있는 층\n",
         ">     torch.nn.ReLU(),\n",
@@ -797,18 +796,18 @@
         "> )\n",
         "> ```\n",
         ">\n",
-        "> 예를 들어 아래의 링크에서는 이러한 경우 레이어는 3개라고 설명하고\n",
-        "> 있습니다.\n",
+        "> 예를 들어\n",
+        "> [여기](https://en.wikipedia.org/wiki/Multilayer_perceptron#Layers)에서는\n",
+        "> 위의 경우 레이어는 3개라고 설명하고 있습니다. 이러한 카운팅은\n",
+        "> **“무시”하세요. 제가 설명한 방식이 맞아요.** [이\n",
+        "> 링크](https://en.wikipedia.org/wiki/Multilayer_perceptron#Layers)\n",
+        "> 잘못(?) 나와있는 이유는 아래와 같습니다.\n",
         ">\n",
-        "> -   <https://en.wikipedia.org/wiki/Multilayer_perceptron#Layers>\n",
+        "> `-` 진짜 예전에 MLP를 소개할 초창기에서는 위의 경우 Layer를 3개로\n",
+        "> 셌음. (Rosenblatt et al. 1962)\n",
         ">\n",
-        "> 이러한 카운팅은 **“무시”하세요. 제가 맞아요.** 위의 링크에 잘못(?)\n",
-        "> 나와있는 이유는 아래와 같습니다.\n",
-        ">\n",
-        "> -   진짜 예전에 MLP를 소개할 초창기에서는 위의 경우 Layer를 3개로\n",
-        ">     셌음. (Rosenblatt et al. 1962)\n",
-        "> -   그런데 요즘은 그렇게 안셈.. (그리고 애초에 MLP라는 용어도 잘\n",
-        ">     안쓰죠..)\n",
+        "> `-` 그런데 요즘은 그렇게 안셈.. (그리고 애초에 MLP라는 용어도 잘\n",
+        "> 안쓰죠..)\n",
         ">\n",
         "> 참고로 히든레이어의 수는 예전방식이나 지금방식이나 동일하게\n",
         "> 카운트하므로 히든레이어만 세면 혼돈이 없습니다.\n",
@@ -863,7 +862,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "5055d7a6-c11a-4d97-a4f7-cacbd758bc43"
+      "id": "18d2a325-f332-4a15-9c11-0223f15ab60a"
     },
     {
       "cell_type": "code",
@@ -896,7 +895,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "58409101-d485-422e-95e0-6ae68ef71083"
+      "id": "35b3c4a0-db4a-4e3d-bfcc-b253f8ce7acd"
     }
   ],
   "nbformat": 4,
